[package]
name = "a01_hello_world_in_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.10.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
yew = { version = "0.20.0", features = ["csr"] }
