[package]
name = "a04_callback"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.10.0"
stylist = { version = "0.12.1", features = ["yew_use_style"] }
yew = { version = "0.20.0", features = ["csr"] }
