[package]
name = "c22_handling_text_field_events"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.10.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
stylist = { version = "0.12.1", features = ["yew_use_style"] }
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["HtmlInputElement"] }
yew = { version = "0.20.0", features = ["csr"] }
